--- a/README.html
+++ b/README.html
@@ -76,6 +76,11 @@
 
     <section class="cuento2">
         <h2>Que es el hip-hop/rap </h2>
+        <p>La cultura hip-hop, nacida en las vibrantes calles de Nueva York a finales de la década de 1970, surgió como un faro de autoexpresión y empoderamiento para la juventud, especialmente en las comunidades marginadas. Lo que empezó en el Bronx como respuesta a los problemas socioeconómicos y a la falta de salidas recreativas se convirtió rápidamente en un movimiento mundial.
+Fue en las animadas fiestas de barrio de este distrito donde el hip-hop empezó a tejer su narrativa, con DJ como Kool Herc y Grandmaster Flash sentando las bases rítmicas. Estas reuniones no eran meras fiestas, sino una plataforma para que los jóvenes se expresaran en una sociedad en la que se sentían sin voz.</p>
+        <p>Los cuatro elementos originales de la cultura hip-hop son fundamentales: El DJ, el MC (o rap), el arte del graffiti y el breaking (también conocido como breakdance, b-boying y b-girling). El DJing sentó las bases musicales, con DJs que experimentaban con breakbeats y tocadiscos para crear un flujo continuo de música.
+El MCing, o rap, surgió como expresión vocal, en la que se utilizaba el habla rítmica y la rima para contar historias y transmitir mensajes. En el frente visual, el arte del grafiti pintó los paisajes urbanos con murales y etiquetas vibrantes, convirtiéndose en una forma de arte callejero que daba identidad a los entornos urbanos.
+El breaking, encarnación física del hip-hop, combinaba elementos de danza, atletismo y arte, convirtiendo las aceras y las pistas de baile en escenarios de impresionantes actuaciones.</p>
         
     </section>
         
