--- a/README.html
+++ b/README.html
@@ -10,7 +10,7 @@
 <body>
 <nav>
      <ul class="menu">
-         <li><a href="README.md">Inicio</a></li>
+         <li><a href="README.html">Inicio</a></li>
      <li><a href="natanael.html">Natanael Cano</a></li>
     <li><a href="gabito.html">Gabito ballesteros</a></li>
      <li><a href="tito.html">Tito Doublep</a></li>
