--- a/README.html
+++ b/README.html
@@ -15,6 +15,7 @@
     <li><a href="gabito.html">Gabito ballesteros</a></li>
      <li><a href="tito.html">Tito Doublep</a></li>
          <li><a href="junior.html">Junior h</a></li>
+         <li><a href="Gera.html">Gera MX</a></li>
         </ul>
     </nav>
 
