--- a/Gera.html
+++ b/Gera.html
@@ -1,1 +1,24 @@
+        <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
+        <li><strong>Las 3 Torres</strong> (2021)</li>
+        <li><strong>NataKong</strong> (2022)</li>
+        <li><strong>Las Torres 3</strong> (2023)</li>
+        <li><strong>Furiosos</strong> (2024)</li>
+    </ul>
 
+    <h2>Proyectos futuros</h2>
+    <p>Se espera que en 2025 Natanael Cano lance una nueva colaboración con artistas internacionales, además de un documental sobre su vida y trayectoria, producido por una plataforma de streaming reconocida.</p>
+
+    <h2>Redes Sociales Oficiales</h2>
+    <ul>
+        <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
+        <li><a href="https://youtube.com/@natanaelcano777?si=WaOnAb4Jyoj4t8LD" target="_blank">YouTube</a></li>
+        <li><a href="https://open.spotify.com/artist/0elWFr7TW8piilVRYJUe4P?si=rkGMuah4TrutwaHdXR0QAw" target="_blank">Spotify</a></li>
+    </ul>
+</section>
+
+<footer>
+    <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
+</footer>
+
+</body>
+</html>
