--- a/Gera.html
+++ b/Gera.html
@@ -1,4 +1,33 @@
-        <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gera Mx</title> Hip-hop/rap</title>
+    <link rel="stylesheet" href="natanael.css">
+</head>
+<body>
+
+<header>
+    <h1 class="titulo-sitio">Gera MX</h1>
+</header>
+    <nav>
+     <ul class="menu">
+         <li><a href="README.html">Inicio</a></li>
+     <li><a href="natanael.html">Natanael Cano</a></li>
+    <li><a href="gabito.html">Gabito ballesteros</a></li>
+     <li><a href="tito.html">Tito Doublep</a></li>
+         <li><a href="junior.html">Junior h</a></li>
+        </ul>
+    </nav>
+
+<section class="contenido">
+    <h2>¿Quién es Gera MX?</h2>
+    <img src="fd3e9c4b1f556b61a53a59ad157a1691.jpg" alt="Natanael Cano" style="width:100%; max-width:600px; display:block; margin:auto;">
+    <p>Natanael Cano es un cantante y compositor mexicano, pionero de los "corridos tumbados". Nacido en Hermosillo, Sonora, en 2001, su música combina sonidos tradicionales del regional mexicano con elementos urbanos como el trap y hip-hop, lo que ha revolucionado la industria y abierto camino a una nueva generación de artistas.</p>
+
+    <h2>Álbumes destacados</h2>
+    <ul>
+        <li><strong>Todo Es Diferente</strong> (2019)</li>        <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
         <li><strong>Las 3 Torres</strong> (2021)</li>
         <li><strong>NataKong</strong> (2022)</li>
         <li><strong>Las Torres 3</strong> (2023)</li>
