--- a/Gera.html
+++ b/Gera.html
@@ -33,6 +33,27 @@
         <li><strong>Las Torres 3</strong> (2023)</li>
         <li><strong>Furiosos</strong> (2024)</li>
     </ul>
+    
+   <h2>Canciones populares</h2>
+    <ol>
+        <li><em>Amor Tumbado</em></li>
+        <li><em>El Drip</em></li>
+        <li><em>Arriba</em></li>
+        <li><em>PRC</em> (con Peso Pluma)</li>
+        <li><em>AMG</em></li>
+    </ol>
+
+    <h2>Premios y reconocimientos</h2>
+    <p>Natanael Cano ha sido reconocido por su impacto en la música regional urbana. En 2021, recibió el premio Billboard Latin Music como “Artista del Año - Debut” y ha estado nominado en múltiples ocasiones en los Premios Juventud y Latin American Music Awards.</p>
+
+    <h2>Colaboraciones importantes</h2>
+    <ul>
+        <li>Ovi</li>
+        <li>Junior H</li>
+        <li>Bad Bunny</li>
+        <li>Gabito Ballesteros</li>
+        <li>Peso Pluma</li>
+    </ul>
 
     <h2>Proyectos futuros</h2>
     <p>Se espera que en 2025 Natanael Cano lance una nueva colaboración con artistas internacionales, además de un documental sobre su vida y trayectoria, producido por una plataforma de streaming reconocida.</p>
