--- a/Gera.html
+++ b/Gera.html
@@ -54,6 +54,43 @@
         <li>Gabito Ballesteros</li>
         <li>Peso Pluma</li>
     </ul>
+    <h2>Estilo y legado</h2>
+    <p>El estilo de Natanael Cano se caracteriza por fusionar guitarras sierreñas con ritmos urbanos. Sus letras hablan de la vida cotidiana, ambición, lujos y también de las calles. Es considerado un pionero de su género y ha sido influencia directa en la carrera de artistas como Junior H, Ovi y Peso Pluma.</p>
+
+    <img src="09b407b8e7243b9ca2277817deb435ae.jpg" alt="Natanael Cano en concierto" style="width:100%; max-width:600px; display:block; margin:auto; margin-top:15px;">
+
+    <h2>Datos curiosos</h2>
+    <ul>
+        <li>Comenzó a tocar guitarra a los 9 años.</li>
+        <li>Es el primer artista en firmar con Rancho Humilde a tan corta edad.</li>
+        <li>Su carrera despegó gracias a YouTube, donde subía covers y corridos.</li>
+    </ul>
+
+    <h2>Influencia cultural</h2>
+    <p>Natanael Cano no solo ha cambiado la música regional mexicana, también ha influido en la moda urbana. Su estilo, que mezcla ropa de diseñador, cadenas, gorras y sneakers exclusivos, ha sido replicado por miles de jóvenes fanáticos que lo ven como un ícono de su generación.</p>
+
+    <h2>Impacto en redes sociales</h2>
+    <p>Con millones de seguidores en Instagram, TikTok y YouTube, Natanael Cano ha sabido conectar con una audiencia joven y digital. Sus adelantos musicales, colaboraciones y estilo de vida se viralizan constantemente, consolidándolo como una figura influyente más allá de la música.</p>
+
+    <h2>Evolución musical</h2>
+    <p>Desde sus inicios con corridos tradicionales hasta sus más recientes mezclas con reggaetón y trap, Cano ha demostrado versatilidad y crecimiento artístico. Ha experimentado con sonidos más electrónicos, beats oscuros y letras introspectivas, manteniendo siempre su esencia tumbada.</p>
+
+    <h2>Frases célebres</h2>
+    <ul>
+        <li>"Yo no soy cantante, soy un morro que canta lo que vive."</li>
+        <li>"Si no fuera por YouTube, tal vez nadie me conocería."</li>
+        <li>"Los corridos tumbados son pa' la raza que quiere algo nuevo."</li>
+    </ul>
+
+    <h2>Discografía completa (selección)</h2>
+    <ul>
+        <li><strong>Todo Es Diferente</strong> (2019)</li>
+        <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
+        <li><strong>Las 3 Torres</strong> (2021)</li>
+        <li><strong>NataKong</strong> (2022)</li>
+        <li><strong>Las Torres 3</strong> (2023)</li>
+        <li><strong>Furiosos</strong> (2024)</li>
+    </ul>
 
     <h2>Proyectos futuros</h2>
     <p>Se espera que en 2025 Natanael Cano lance una nueva colaboración con artistas internacionales, además de un documental sobre su vida y trayectoria, producido por una plataforma de streaming reconocida.</p>
