--- a/Gera.html
+++ b/Gera.html
@@ -23,11 +23,12 @@
 <section class="contenido">
     <h2>¿Quién es Gera MX?</h2>
     <img src="fd3e9c4b1f556b61a53a59ad157a1691.jpg" alt="Natanael Cano" style="width:100%; max-width:600px; display:block; margin:auto;">
-    <p>Natanael Cano es un cantante y compositor mexicano, pionero de los "corridos tumbados". Nacido en Hermosillo, Sonora, en 2001, su música combina sonidos tradicionales del regional mexicano con elementos urbanos como el trap y hip-hop, lo que ha revolucionado la industria y abierto camino a una nueva generación de artistas.</p>
+    <p>El rapero mexicano Gera MX, cuyo nombre real es Gerardo Daniel Torres Montante, es un destacado exponente de la escena del rap en México. Nacido el 14 de octubre de 1994 en San Luis Potosí, se ha ganado un lugar en la industria de la música por su estilo único y sus líricas que suelen reflejar vivencias personales y problemas sociales.</p>
 
     <h2>Álbumes destacados</h2>
     <ul>
-        <li><strong>Todo Es Diferente</strong> (2019)</li>        <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
+        <li><strong>Todo Es Diferente</strong> (2019)</li>        
+        <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
         <li><strong>Las 3 Torres</strong> (2021)</li>
         <li><strong>NataKong</strong> (2022)</li>
         <li><strong>Las Torres 3</strong> (2023)</li>
