--- a/Gera.html
+++ b/Gera.html
@@ -27,21 +27,21 @@
 
     <h2>Álbumes destacados</h2>
     <ul>
-        <li><strong>Todo Es Diferente</strong> (2019)</li>        
-        <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
-        <li><strong>Las 3 Torres</strong> (2021)</li>
-        <li><strong>NataKong</strong> (2022)</li>
-        <li><strong>Las Torres 3</strong> (2023)</li>
-        <li><strong>Furiosos</strong> (2024)</li>
+        <li><strong>No me maten antes de hoy</strong> (2013)</li>        
+        <li><strong>Precipicio</strong> (2015)</li>
+        <li><strong>Los niños grandes no juegan</strong></strong> (2016)</li>
+        <li><strong>El vicio y la fama</strong> (2019)</li>
+        <li><strong>No tenian fe</strong> (2021)</li>
+        <li><strong>Mustang 65</strong> (2022)</li>
     </ul>
     
    <h2>Canciones populares</h2>
     <ol>
-        <li><em>Amor Tumbado</em></li>
-        <li><em>El Drip</em></li>
-        <li><em>Arriba</em></li>
-        <li><em>PRC</em> (con Peso Pluma)</li>
-        <li><em>AMG</em></li>
+        <li><em>Botella tras botella</em></li>
+        <li><em>Nunca te pude alcanzar</em></li>
+        <li><em>Se me olvido</em></li>
+        <li><em>Querida</em> (con Nanpa basico)</li>
+        <li><em>Problemas</em></li>
     </ol>
 
     <h2>Premios y reconocimientos</h2>
@@ -49,11 +49,11 @@
 
     <h2>Colaboraciones importantes</h2>
     <ul>
-        <li>Ovi</li>
-        <li>Junior H</li>
-        <li>Bad Bunny</li>
-        <li>Gabito Ballesteros</li>
-        <li>Peso Pluma</li>
+        <li>Cristian Nodal</li>
+        <li>Santa fe klan</li>
+        <li>Aleman</li>
+        <li>Nanpa Básico</li>
+        <li>Charles Ans</li>
     </ul>
     <h2>Estilo y legado</h2>
     <p>El estilo de Natanael Cano se caracteriza por fusionar guitarras sierreñas con ritmos urbanos. Sus letras hablan de la vida cotidiana, ambición, lujos y también de las calles. Es considerado un pionero de su género y ha sido influencia directa en la carrera de artistas como Junior H, Ovi y Peso Pluma.</p>
