--- a/Gera.html
+++ b/Gera.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gera Mx</title> Hip-hop/rap</title>
+    <title>Gera Mx</title><title> Hip-hop/rap</title>
     <link rel="stylesheet" href="natanael.css">
 </head>
 <body>
@@ -56,8 +56,9 @@
         <li>Charles Ans</li>
     </ul>
     <h2>Estilo y legado</h2>
-    <p>El estilo de Natanael Cano se caracteriza por fusionar guitarras sierreñas con ritmos urbanos. Sus letras hablan de la vida cotidiana, ambición, lujos y también de las calles. Es considerado un pionero de su género y ha sido influencia directa en la carrera de artistas como Junior H, Ovi y Peso Pluma.</p>
+    <p>Gera MX se destaca por un estilo auténtico y emocional, con letras que abordan la vida real, el amor, la calle y la superación. Su voz rasposa y su narrativa personal lo hacen único en el rap mexicano. Ha fusionado el rap con géneros como el trap y el regional mexicano, logrando éxitos como “Botella Tras Botella”.
 
+Como pionero del rap en el mainstream, ha inspirado a nuevas generaciones y creado el sello Rich Vagos, impulsando a talentos emergentes. Su legado es el de un artista que rompió barreras sin perder su esencia, dejando una marca en la música urbana latinoamericana.</p>
     <img src="09b407b8e7243b9ca2277817deb435ae.jpg" alt="Natanael Cano en concierto" style="width:100%; max-width:600px; display:block; margin:auto; margin-top:15px;">
 
     <h2>Datos curiosos</h2>
