--- a/Gera.html
+++ b/Gera.html
@@ -45,8 +45,11 @@
     </ol>
 
     <h2>Premios y reconocimientos</h2>
-    <p>Natanael Cano ha sido reconocido por su impacto en la música regional urbana. En 2021, recibió el premio Billboard Latin Music como “Artista del Año - Debut” y ha estado nominado en múltiples ocasiones en los Premios Juventud y Latin American Music Awards.</p>
+    <p>Premio Lo Nuestro 2022: Ganó en la categoría "Colaboración del Año – Regional Mexicano" por su éxito "Botella Tras Botella" junto a Christian Nodal.  
 
+Discos de Platino: "Botella Tras Botella" recibió múltiples certificaciones, incluyendo Doble Platino en México (más de 80,000 copias vendidas) y Platino en Centroamérica.  
+
+Billboard Hot 100: Se convirtió en el primer rapero mexicano en ingresar a esta lista con "Botella Tras Botella".  </p>
     <h2>Colaboraciones importantes</h2>
     <ul>
         <li>Cristian Nodal</li>
@@ -63,9 +66,9 @@ Como pionero del rap en el mainstream, ha inspirado a nuevas generaciones y crea
 
     <h2>Datos curiosos</h2>
     <ul>
-        <li>Comenzó a tocar guitarra a los 9 años.</li>
-        <li>Es el primer artista en firmar con Rancho Humilde a tan corta edad.</li>
-        <li>Su carrera despegó gracias a YouTube, donde subía covers y corridos.</li>
+        <li>Origen del Nombre Artístico: "Gera" proviene de su nombre Gerardo, y "MX" hace referencia a "Mexamafia", su antiguo colectivo musical.  </li>
+        <li>Cambio de Nombre: Tras conflictos con Mexamafia y su exmánager, eliminó la "M" final de su nombre artístico, pasando de "Gera MXM" a "Gera MX".  </li>
+        <li>Fortuna Estimada: Se estima que posee una fortuna de aproximadamente 170 millones de pesos mexicanos, incluyendo propiedades, vehículos y un jet privado.  </li>
     </ul>
 
     <h2>Influencia cultural</h2>
