--- a/Gera.html
+++ b/Gera.html
@@ -72,11 +72,9 @@ Como pionero del rap en el mainstream, ha inspirado a nuevas generaciones y crea
     </ul>
 
     <h2>Influencia cultural</h2>
-    <p>Natanael Cano no solo ha cambiado la música regional mexicana, también ha influido en la moda urbana. Su estilo, que mezcla ropa de diseñador, cadenas, gorras y sneakers exclusivos, ha sido replicado por miles de jóvenes fanáticos que lo ven como un ícono de su generación.</p>
-
+    <p>Gera MX ha sido una figura clave en la evolución del rap en México. Su música ha influido en toda una generación de jóvenes artistas urbanos, combinando estilos como el boombap, el trap y el regional mexicano. Ha logrado que el rap mexicano gane respeto a nivel internacional, abriendo puertas para colaboraciones entre géneros y demostrando que se puede mantener autenticidad y llegar al éxito comercial.</p>
     <h2>Impacto en redes sociales</h2>
-    <p>Con millones de seguidores en Instagram, TikTok y YouTube, Natanael Cano ha sabido conectar con una audiencia joven y digital. Sus adelantos musicales, colaboraciones y estilo de vida se viralizan constantemente, consolidándolo como una figura influyente más allá de la música.</p>
-
+    <p>Gera MX tiene una fuerte presencia en plataformas como Instagram, YouTube y TikTok, donde conecta directamente con sus seguidores. Canciones como “Botella Tras Botella” se viralizaron rápidamente, convirtiéndose en tendencias globales. Su contenido, tanto musical como personal, le ha permitido construir una comunidad sólida y leal, reforzando su influencia más allá de la música.</p>
     <h2>Evolución musical</h2>
     <p>Desde sus inicios con corridos tradicionales hasta sus más recientes mezclas con reggaetón y trap, Cano ha demostrado versatilidad y crecimiento artístico. Ha experimentado con sonidos más electrónicos, beats oscuros y letras introspectivas, manteniendo siempre su esencia tumbada.</p>
 
