--- a/Gera.html
+++ b/Gera.html
@@ -76,7 +76,7 @@ Como pionero del rap en el mainstream, ha inspirado a nuevas generaciones y crea
     <h2>Impacto en redes sociales</h2>
     <p>Gera MX tiene una fuerte presencia en plataformas como Instagram, YouTube y TikTok, donde conecta directamente con sus seguidores. Canciones como “Botella Tras Botella” se viralizaron rápidamente, convirtiéndose en tendencias globales. Su contenido, tanto musical como personal, le ha permitido construir una comunidad sólida y leal, reforzando su influencia más allá de la música.</p>
     <h2>Evolución musical</h2>
-    <p>Desde sus inicios con corridos tradicionales hasta sus más recientes mezclas con reggaetón y trap, Cano ha demostrado versatilidad y crecimiento artístico. Ha experimentado con sonidos más electrónicos, beats oscuros y letras introspectivas, manteniendo siempre su esencia tumbada.</p>
+    <p>Gera MX comenzó con un estilo de rap tradicional, centrado en letras personales y crudas. Con el tiempo, su música evolucionó hacia sonidos más diversos, incorporando trap, boombap y hasta regional mexicano. Esta versatilidad le permitió llegar a nuevas audiencias sin perder su esencia, destacando su capacidad de adaptación y crecimiento artístico.</p>
 
     <h2>Frases célebres</h2>
     <ul>
