--- a/Gera.html
+++ b/Gera.html
@@ -87,7 +87,7 @@ Como pionero del rap en el mainstream, ha inspirado a nuevas generaciones y crea
 
     <h2>Discografía completa (selección)</h2>
     <ul>
-        <li><strong>Todo Es Diferente</strong> (2019)</li>
+        <li><strong></strong> (2019)</li>
         <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
         <li><strong>Las 3 Torres</strong> (2021)</li>
         <li><strong>NataKong</strong> (2022)</li>
@@ -96,8 +96,9 @@ Como pionero del rap en el mainstream, ha inspirado a nuevas generaciones y crea
     </ul>
 
     <h2>Proyectos futuros</h2>
-    <p>Se espera que en 2025 Natanael Cano lance una nueva colaboración con artistas internacionales, además de un documental sobre su vida y trayectoria, producido por una plataforma de streaming reconocida.</p>
+    <p>Gera MX continúa activo en la escena musical.  Recientemente, anunció en redes sociales el próximo lanzamiento de un nuevo EP, generando expectación entre sus seguidores, aunque aún no revela detalles específicos  .
 
+Además, su colaboración con Alemán en el proyecto Rich Mafia ha sido bien recibida, y se espera que continúen trabajando juntos en futuras producciones  .</p>
     <h2>Redes Sociales Oficiales</h2>
     <ul>
         <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
