--- a/Gera.html
+++ b/Gera.html
@@ -80,19 +80,19 @@ Como pionero del rap en el mainstream, ha inspirado a nuevas generaciones y crea
 
     <h2>Frases célebres</h2>
     <ul>
-        <li>"Yo no soy cantante, soy un morro que canta lo que vive."</li>
-        <li>"Si no fuera por YouTube, tal vez nadie me conocería."</li>
-        <li>"Los corridos tumbados son pa' la raza que quiere algo nuevo."</li>
+        <li>"Con una empezó, la otra me atrapó. No fue culpa mía, fue culpa del corazón."</li>
+        <li>"Corazón, ¿sabes de quién hablo? A la que sacó del infierno este, pero me encontró su amor."</li>
+        <li>" Me gustan tus ojos rojos fumando ni dice nada. Gusta mirarte cerca y que huela a tierra mojada."</li>
     </ul>
 
     <h2>Discografía completa (selección)</h2>
     <ul>
-        <li><strong></strong> (2019)</li>
-        <li><strong>Corridos Tumbados Vol. 2</strong> (2020)</li>
-        <li><strong>Las 3 Torres</strong> (2021)</li>
-        <li><strong>NataKong</strong> (2022)</li>
-        <li><strong>Las Torres 3</strong> (2023)</li>
-        <li><strong>Furiosos</strong> (2024)</li>
+        <li>Caos en el paraíso<strong></strong> (2011)</li>
+        <li><strong>Precipicio</strong> (2013)</li>
+        <li><strong>No veo, no siento</strong> (2014)</li>
+        <li><strong>Los niños grandes no juegan</strong> (2017)</li>
+        <li><strong>El vicio y la fama</strong> (2019)</li>
+        <li><strong>Los no tan tristes</strong> (2021)</li>
     </ul>
 
     <h2>Proyectos futuros</h2>
