--- a/README.html
+++ b/README.html
@@ -71,7 +71,7 @@
         <p>
             Mientras los corridos tradicionales se estancaban, el Gangsta Rap se generalizó y, respaldado por las discográficas más grandes, se convirtió en un fenómeno popular. Con la llegada de la música trap, los jóvenes artistas mexicanos se sintieron atraídos por la energía y las influencias urbanas del trap y el hip-hop, lo que permitió una nueva fusión. Estos artistas adaptaron las letras de los corridos a los ritmos del trap, creando lo que hoy conocemos como "Corridos Tumbados".
         </p>
-        <img src="b637d5e3c212613a76f22b9f08d6fb35.jpg" alt="Junior H">
+        <img src="65dbf24498b8b7187e43762b9e2d285d.jpg" alt="Junior H">
     </section>
     </div>
 
@@ -82,6 +82,7 @@ Fue en las animadas fiestas de barrio de este distrito donde el hip-hop empezó 
         <p>Los cuatro elementos originales de la cultura hip-hop son fundamentales: El DJ, el MC (o rap), el arte del graffiti y el breaking (también conocido como breakdance, b-boying y b-girling). El DJing sentó las bases musicales, con DJs que experimentaban con breakbeats y tocadiscos para crear un flujo continuo de música.
 El MCing, o rap, surgió como expresión vocal, en la que se utilizaba el habla rítmica y la rima para contar historias y transmitir mensajes. En el frente visual, el arte del grafiti pintó los paisajes urbanos con murales y etiquetas vibrantes, convirtiéndose en una forma de arte callejero que daba identidad a los entornos urbanos.
 El breaking, encarnación física del hip-hop, combinaba elementos de danza, atletismo y arte, convirtiendo las aceras y las pistas de baile en escenarios de impresionantes actuaciones.</p>
+        <p>El hip-hop es una cultura urbana nacida en los años 70 en Nueva York. Está formada por cuatro elementos: rap (música con rimas y ritmo), DJing (mezcla de sonidos), breakdance (baile callejero) y graffiti (arte urbano). Es una forma de expresión artística y social que refleja la vida, las luchas y la creatividad de quienes lo practican.</p>
         <img src="b637d5e3c212613a76f22b9f08d6fb35.jpg" alt="Junior H">
         
     </section>
