--- a/Gera.html
+++ b/Gera.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gera Mx</title><title> Hip-hop/rap</title>
-    <link rel="stylesheet" href="natanael.css">
+    <link rel="stylesheet" href="gera.css">
 </head>
 <body>
 
