--- a/junior.html
+++ b/junior.html
@@ -18,6 +18,7 @@
     <li><a href="gabito.html">Gabito ballesteros</a></li>
      <li><a href="tito.html">Tito Doublep</a></li>
          <li><a href="junior.html">Junior h</a></li>
+         <li><a href="Gera.html">Gera mxm</a></li>
         </ul>
     </nav>
 
