--- a/Gera.html
+++ b/Gera.html
@@ -102,7 +102,7 @@ Como pionero del rap en el mainstream, ha inspirado a nuevas generaciones y crea
 Además, su colaboración con Alemán en el proyecto Rich Mafia ha sido bien recibida, y se espera que continúen trabajando juntos en futuras producciones  .</p>
     <h2>Redes Sociales Oficiales</h2>
     <ul>
-        <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
+        <li><a href="https://www.instagram.com/geramx1?igsh=OHQ2d2swOWVqM2gw" target="_blank">Instagram</a></li>
         <li><a href="https://youtube.com/@natanaelcano777?si=WaOnAb4Jyoj4t8LD" target="_blank">YouTube</a></li>
         <li><a href="https://open.spotify.com/artist/0elWFr7TW8piilVRYJUe4P?si=rkGMuah4TrutwaHdXR0QAw" target="_blank">Spotify</a></li>
     </ul>
