--- a/Gera.html
+++ b/Gera.html
@@ -103,7 +103,7 @@ Además, su colaboración con Alemán en el proyecto Rich Mafia ha sido bien rec
     <h2>Redes Sociales Oficiales</h2>
     <ul>
         <li><a href="https://www.instagram.com/geramx1?igsh=OHQ2d2swOWVqM2gw" target="_blank">Instagram</a></li>
-        <li><a href="https://youtube.com/@natanaelcano777?si=WaOnAb4Jyoj4t8LD" target="_blank">YouTube</a></li>
+        <li><a href="https://youtube.com/@geramx?si=X3BnbUvTh7xwBD4S" target="_blank">YouTube</a></li>
         <li><a href="https://open.spotify.com/artist/0elWFr7TW8piilVRYJUe4P?si=rkGMuah4TrutwaHdXR0QAw" target="_blank">Spotify</a></li>
     </ul>
 </section>
