--- a/natanael.html
+++ b/natanael.html
@@ -97,7 +97,7 @@
 
     <h2>Proyectos futuros</h2>
     <p>Se espera que en 2025 Natanael Cano lance una nueva colaboración con artistas internacionales, además de un documental sobre su vida y trayectoria, producido por una plataforma de streaming reconocida.</p>
-<video src=""controls></video>
+<video src="Natanael Cano.mp4"controls></video>
     <h2>Redes Sociales Oficiales</h2>
     <ul>
         <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
