--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mundo musical</title>
+    <link rel="stylesheet" href="web.css">
+</head>
+    <script src="animaciones.js"></script>
+<body>
+<nav>
+     <ul class="menu">
+         <li><a href="README.html">Inicio</a></li>
+     <li><a href="natanael.html">Natanael Cano</a></li>
+    <li><a href="gabito.html">Gabito ballesteros</a></li>
+     <li><a href="tito.html">Tito Doublep</a></li>
+         <li><a href="junior.html">Junior h</a></li>
+         <li><a href="Gera.html">Gera MX</a></li>
+        </ul>
+    </nav>
 
+<header class="header">
+    <h1 class="titulo-sitio">Musica urbana.</h1>
+    <p class="subtitulo animado"> Adéntrate en el mundo de la música sus diferentes estilos y letras, dónde conoceras a varios artitas del género corridos tumbados incluyendo al artista Gera mxm del genero hip-hop/rap siendo un artista reconocido</p>
+</header>
