--- a/index.html
+++ b/index.html
@@ -103,3 +103,14 @@ El breaking, encarnación física del hip-hop, combinaba elementos de danza, atl
    <p>5. Rap más rápido: Eminem tiene el récord Guinness por una de las canciones con mayor cantidad de palabras en poco tiempo: "Rap God" tiene 1,560 palabras en 6 minutos y 4 segundos.
         </p>
         </section>
+
+    </main>
+
+<footer class="footer animado">
+    <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
+    <p>Desarrollado por amantes del regional con alma urbana.</p>
+</footer>
+
+
+</body>
+</html>
