--- a/natanael.html
+++ b/natanael.html
@@ -98,7 +98,8 @@
     <h2>Proyectos futuros</h2>
     <p>Se espera que en 2025 Natanael Cano lance una nueva colaboración con artistas internacionales, además de un documental sobre su vida y trayectoria, producido por una plataforma de streaming reconocida.</p>
 <h2>canción más popular del artista</h2>
-    <ul>AMG (Con Peso Pluma y Gabito Ballesteros)
+    <ul>
+        <li><strong>AMG (Con Peso Pluma y Gabito Ballesteros)</strong></li>
         <video src="Natanael Cano.mp4"controls></video>
     </ul>
     <h2>Redes Sociales Oficiales</h2>
