--- a/natanael.html
+++ b/natanael.html
@@ -97,11 +97,10 @@
 
     <h2>Proyectos futuros</h2>
     <p>Se espera que en 2025 Natanael Cano lance una nueva colaboración con artistas internacionales, además de un documental sobre su vida y trayectoria, producido por una plataforma de streaming reconocida.</p>
-<section class="video>
-    
-    <video src="Natanael Cano.mp4"controls></video>
-    
-</section>
+<video id="miVideo" controls>
+  <source src="Natanael Cano.mp4" type="video/mp4">
+  Tu navegador no soporta la reproducción de videos.
+</video>
     <h2>Redes Sociales Oficiales</h2>
     <ul>
         <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
