--- a/natanael.html
+++ b/natanael.html
@@ -106,10 +106,12 @@
     </ul>
     
 </section>
+    <section>
     <video id="miVideo" controls>
   <source src="Natanael Cano.mp4" type="video/mp4">
   Tu navegador no soporta la reproducción de videos.
     </video>
+    </section>
 
 <footer>
     <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
