--- a/natanael.html
+++ b/natanael.html
@@ -97,7 +97,15 @@
 
     <h2>Proyectos futuros</h2>
     <p>Se espera que en 2025 Natanael Cano lance una nueva colaboración con artistas internacionales, además de un documental sobre su vida y trayectoria, producido por una plataforma de streaming reconocida.</p>
-
+<section class="video-section">
+    <h2>Video destacado</h2>
+    <div class="video-container">
+        <video id="miVideo" controls>
+            <source src="Natanael Cano.mp4" type="video/mp4">
+            Tu navegador no soporta la reproducción de videos.
+        </video>
+    </div>
+</section>
     <h2>Redes Sociales Oficiales</h2>
     <ul>
         <li><a href="https://www.instagram.com/natanael_cano" target="_blank">Instagram</a></li>
@@ -106,13 +114,7 @@
     </ul>
     
 </section>
-    <section>
-    <video id="miVideo" controls>
-  <source src="Natanael Cano.mp4" type="video/mp4">
-  Tu navegador no soporta la reproducción de videos.
-    </video>
-    </section>
-
+    
 <footer>
     <p>&copy; 2025 Corridos Tumbados - Todos los derechos reservados</p>
 </footer>
