--- a/junior.html
+++ b/junior.html
@@ -46,6 +46,14 @@
         <li>Se Amerita</li>
         <li>Tronando Ligas (con Peso Pluma)</li>
     </ul>
+    <video
+  controls
+  style="width:100%;max-width:800px;height:auto;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.3);display:block;margin:20px auto;background-color:#000;"
+>
+  <source src="Junior H.mp4" type="video/mp4">
+  Tu navegador no soporta la reproducción de videos.
+    </video>
+    
 
     <h2>Estilo musical</h2>
     <p>Junior H destaca por sus letras introspectivas, tonos melancólicos y arreglos suaves de guitarra. Ha sido clave en darle al corrido tumbado una dimensión más emocional, creando una estética sonora conocida como “sad sierreño”.</p>
