--- a/gabito.html
+++ b/gabito.html
@@ -41,6 +41,14 @@
         <li>El Tsurito (ft. Peso Pluma)</li>
         <li>Aquí Seguimos</li>
     </ol>
+    <video
+  controls
+  style="width:100%;max-width:800px;height:auto;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.3);display:block;margin:20px auto;background-color:#000;"
+>
+  <source src="Gabito.mp4" type="video/mp4">
+  Tu navegador no soporta la reproducción de videos.
+    </video>
+    
 
     <h2>Colaboraciones importantes</h2>
     <ul>
