--- a/Gera.html
+++ b/Gera.html
@@ -44,6 +44,14 @@
         <li><em>Querida</em> (con Nanpa basico)</li>
         <li><em>Problemas</em></li>
     </ol>
+    <video
+  controls
+  style="width:100%;max-width:800px;height:auto;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.3);display:block;margin:20px auto;background-color:#000;"
+>
+  <source src="Gera.mp4" type="video/mp4">
+  Tu navegador no soporta la reproducción de videos.
+    </video>
+    
 
     <h2>Premios y reconocimientos</h2>
     <p>Premio Lo Nuestro 2022: Ganó en la categoría "Colaboración del Año – Regional Mexicano" por su éxito "Botella Tras Botella" junto a Christian Nodal.  
