--- a/tito.html
+++ b/tito.html
@@ -43,6 +43,14 @@
         <li>"Tumbando la Rutina"</li>
         <li>"Firmes y Reales"</li>
     </ul>
+    <video
+  controls
+  style="width:100%;max-width:800px;height:auto;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.3);display:block;margin:20px auto;background-color:#000;"
+>
+  <source src="Tito.mp4" type="video/mp4">
+  Tu navegador no soporta la reproducción de videos.
+    </video>
+    
 
     <h2>Colaboraciones importantes</h2>
     <ul>
