--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <li><a href="natanael.html">Natanael Cano</a></li>
     <li><a href="gabito.html">Gabito ballesteros</a></li>
      <li><a href="tito.html">Tito Doublep</a></li>
-         <li><a href="junior.html">Junior h</a></li><br>
+         <li><a href="junior.html">Junior h</a></li>
          <li><a href="Gera.html">Gera MX</a></li>
          <li><a href="Juego.html">Trivia</a></li>
         </ul>
@@ -80,7 +80,7 @@
   controls
   style="width:100%;max-width:800px;height:auto;border-radius:12px;box-shadow:0 4px 20px rgba(0,0,0,0.3);display:block;margin:20px auto;background-color:#000;"
 >
-  <source src="Gera.mp4" type="video/mp4">
+  <source src="música.mp4" type="video/mp4">
   Tu navegador no soporta la reproducción de videos.
         </video>
         
