--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <nav>
      <ul class="menu">
          <li><a href="README.html">Inicio</a></li>
-     <li><a href="natanael.html">Natanael Cano</a></li>
-    <li><a href="gabito.html">Gabito ballesteros</a></li>
-     <li><a href="tito.html">Tito Doublep</a></li>
-         <li><a href="junior.html">Junior h</a></li>
-         <li><a href="Gera.html">Gera MX</a></li>
+     <li><a href="natanael.html">Natanael</a></li>
+    <li><a href="gabito.html">Gabito</a></li>
+     <li><a href="tito.html">Tito</a></li>
+         <li><a href="junior.html">Junior</a></li>
+         <li><a href="Gera.html">Gera</a></li>
          <li><a href="Juego.html">Trivia</a></li>
         </ul>
     </nav>
