--- a/natanael.html
+++ b/natanael.html
@@ -112,6 +112,31 @@
         <li><a href="https://youtube.com/@natanaelcano777?si=WaOnAb4Jyoj4t8LD" target="_blank">YouTube</a></li>
         <li><a href="https://open.spotify.com/artist/0elWFr7TW8piilVRYJUe4P?si=rkGMuah4TrutwaHdXR0QAw" target="_blank">Spotify</a></li>
     </ul>
+    <section class="formulario-coment" id="formulario-coment">
+    <div class="contenedor">
+        <div class="formulario">
+            <h2>Envíame tus comentarios</h2>
+            <form action="https://formsubmit.co/monsecartier2108@gmail.com" method="POST">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required/>
+
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required/>
+
+                <label for="message">Mensaje:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
+                <input type="hidden" name="_subject" value="Nuevo comentario"/>
+
+                <input type="hidden" name="_next" value=""/>
+
+                <input type="hidden" name="_captcha" value="false"/>
+
+                <button type="submit" class="btn-1 fade-in">Enviar comentario</button>
+            </form>
+        </div>
+    </div>
+    </section>
     
 </section>
     
