--- a/natanael.html
+++ b/natanael.html
@@ -128,7 +128,7 @@
 
                 <input type="hidden" name="_subject" value="Nuevo comentario"/>
 
-                <input type="hidden" name="_next" value="/comentarios.html"/>
+                <input type="hidden" name="_next" value="https://github.com/monse2124/monse2124.github.io/blob/main/comentarios.html"/>
 
                 <input type="hidden" name="_captcha" value="false"/>
 
