--- a/Gera.html
+++ b/Gera.html
@@ -114,6 +114,31 @@ Además, su colaboración con Alemán en el proyecto Rich Mafia ha sido bien rec
         <li><a href="https://youtube.com/@geramx?si=X3BnbUvTh7xwBD4S" target="_blank">YouTube</a></li>
         <li><a href="https://open.spotify.com/artist/2hejA1Dkf8v8R0koF44FvW?si=hDg4rHSsSpGhSdCn_hq-3g" target="_blank">Spotify</a></li>
     </ul>
+    <section class="formulario-coment" id="formulario-coment">
+    <div class="contenedor">
+        <div class="formulario">
+            <h2>Envíame tus comentarios</h2>
+            <form action="https://formsubmit.co/monsecartier2108@gmail.com" method="POST">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required/>
+
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required/>
+
+                <label for="message">Mensaje:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
+                <input type="hidden" name="_subject" value="Nuevo comentario"/>
+
+                <input type="hidden" name="_next" value="https://monse2124.github.io/comentarios.html"/>
+
+                <input type="hidden" name="_captcha" value="false"/>
+
+                <button type="submit" class="btn-1 fade-in">Enviar comentario</button>
+            </form>
+        </div>
+    </div>
+    </section>
 </section>
 
 <footer>
