--- a/tito.html
+++ b/tito.html
@@ -82,6 +82,31 @@
 
     <h2>Proyectos futuros</h2>
     <p>Tito Doble P prepara un nuevo EP para finales de 2025, con temas que experimentarán con sonidos acústicos y fusiones con rap. También ha anunciado su primera gira por Estados Unidos.</p>
+<section class="formulario-coment" id="formulario-coment">
+    <div class="contenedor">
+        <div class="formulario">
+            <h2>Envíame tus comentarios</h2>
+            <form action="https://formsubmit.co/monsecartier2108@gmail.com" method="POST">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required/>
+
+                <label for="email">Correo Electrónico:</label>
+                <input type="email" id="email" name="email" required/>
+
+                <label for="message">Mensaje:</label>
+                <textarea id="message" name="message" rows="4" required></textarea>
+
+                <input type="hidden" name="_subject" value="Nuevo comentario"/>
+
+                <input type="hidden" name="_next" value="https://monse2124.github.io/comentarios.html"/>
+
+                <input type="hidden" name="_captcha" value="false"/>
+
+                <button type="submit" class="btn-1 fade-in">Enviar comentario</button>
+            </form>
+        </div>
+    </div>
+</section>
 </section>
 
 <footer>
